syntax = "proto3";
package board.v1;
option go_package = "github.com/robbydyer/sports/internal/proto/basicboard";
import "google/protobuf/empty.proto";

service BasicBoard {
    rpc SetStatus(SetStatusReq) returns (google.protobuf.Empty);
    rpc GetStatus(google.protobuf.Empty) returns (StatusResp);
}

message Status{
    bool enabled = 1;
    bool scroll_enabled = 2;
}

message SetStatusReq {
    Status status = 1;
}

message StatusResp {
    Status status = 1;
}